tests/core/valid/multiple-files/susie.cl
class Susie inherits Object {
   a : Bob ;

};
