tests/core/invalid/mutliple-files.cl/susie.cl
class Susie inherits Object {
   a : Bob ;

};

class Main {
  main() : Object {};
};
